Changing logo, and SEO

--- a/index.html
+++ b/index.html
@@ -1,10 +1,72 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- SEO Básico -->
+    <title>Liquidadora Lyah Ltda | Precios económicos, precios de locos</title>
+    <meta
+      name="description"
+      content="Liquidadora Lyah Ltda en Valparaíso ofrece abarrotes, congelados, lácteos, bebidas, golosinas, productos de limpieza e higiene personal a precios bajos. Atención personalizada y horarios extendidos."
+    />
+    <meta
+      name="keywords"
+      content="liquidadora, abarrotes baratos, tienda económica Valparaíso, precios bajos Valparaíso, abasto Placeres, abarrotes Placeres, tienda de conveniencia, precios económicos, alimentos, congelados, lácteos, limpieza, higiene personal, golosinas, bebidas, ofertas Valparaíso, distribuidora mayorista Valparaíso"
+    />
+
+    <meta name="author" content="Liquidadora Lyah Ltda" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- SEO Local -->
+    <meta name="geo.region" content="CL-VS" />
+    <meta name="geo.placename" content="Valparaíso" />
+    <meta name="geo.position" content="-33.0434;-71.6127" />
+    <meta name="ICBM" content="-33.0434, -71.6127" />
+
+    <!-- Open Graph (Facebook, Instagram, WhatsApp) -->
+    <meta
+      property="og:title"
+      content="Liquidadora Lyah Ltda | Precios económicos todos los días"
+    />
+    <meta
+      property="og:description"
+      content="Abarrotes, congelados, lácteos, bebidas, golosinas, limpieza y más a precios solidarios. Horarios extendidos y atención personalizada en Valparaíso."
+    />
+    <meta property="og:image" content="https://tusitio.com/preview.jpeg" />
+    <meta property="og:type" content="business.business" />
+    <meta property="og:url" content="https://tusitio.com" />
+    <meta
+      property="business:contact_data:street_address"
+      content="Av. Manuel Antonio Matta 1766, Placeres"
+    />
+    <meta property="business:contact_data:locality" content="Valparaíso" />
+    <meta property="business:contact_data:region" content="V Región" />
+    <meta property="business:contact_data:country_name" content="Chile" />
+    <meta
+      property="business:contact_data:phone_number"
+      content="+56959721475"
+    />
+    <meta
+      property="business:contact_data:website"
+      content="https://tusitio.com"
+    />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Liquidadora Lyah Ltda | Precios económicos, precios de locos"
+    />
+    <meta
+      name="twitter:description"
+      content="Productos de primera necesidad a precios bajos en Valparaíso. Horarios extendidos y atención personalizada."
+    />
+    <meta name="twitter:image" content="https://tusitio.com/preview.jpeg" />
+    <meta name="twitter:site" content="@Liquidadora_de_Lyah" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>liquidadora-lyah</title>
   </head>
   <body>
     <div id="root"></div>
